...

       // MARK: - Lifecycle

       override func viewDidLoad() {
           super.viewDidLoad()

           counterLabel.accessibilityIdentifier = "Index"
           presenter = MovieQuizPresenter(viewController: self)

           yesButton.layer.cornerRadius = 20
            noButton.layer.cornerRadius = 20
           imageView.layer.cornerRadius = 20
        
...
